# hccv

./: .gitignore  LICENSE  README.md  hccv.cabal  libccv
cbits/: hccv_helpers.c  hccv_helpers.h
src/: AuxTypes.hs  Basic.hs  Classic.hs  Convos.hs  FfiUtils.hs  IO.hs  Memory.hs  Raw.hsc  Types.hs  Util.hs
